app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app1-service
spec:
  selector:
    app: hello-app1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
