app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app2-service
spec:
  selector:
    app: hello-app2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
